Better logs and translated message for the notification service

--- a/.env
+++ b/.env
@@ -69,5 +69,5 @@ PASTEC_INIT_INDEX=./pastec-index-last.dat
 
 CLOUDINARY_URL=cloudinary://my_key:my_secret@my_cloud_name
 
-PUSHER_INSTANCE_ID=my_instance_id
-PUSHER_SECRET_KEY=my_secret_key
+PUSHER_INSTANCE_ID=
+PUSHER_SECRET_KEY=
