Use msmtp instead of ssmtp Use PHP_EOL instead of a hardcoded string

--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -1,7 +1,7 @@
 FROM php:7.3-fpm
 MAINTAINER Bruno Perel
 
-RUN apt-get update && apt-get install -y git wget unzip mariadb-client nano ssmtp telnet
+RUN apt-get update && apt-get install -y git wget unzip mariadb-client nano msmtp telnet
 
 RUN echo 'sendmail_path = /usr/bin/env catchmail -f admin@ducksmanager.net' > /usr/local/etc/php/conf.d/mail.ini
 
