Connect web to the global network Upgrade to mariadb 10.4

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
      - ./current:/var/www:z
     networks:
      - front-network
+     - workspace_global-front-network
 
   php:
     container_name: dm-server-php
@@ -47,7 +48,7 @@ services:
 
   db_coa:
     container_name: db_coa
-    image: "mariadb:10.2"
+    image: "mariadb:10.4"
     volumes:
      - $MYSQL_INIT_SCRIPT_COA:/docker-entrypoint-initdb.d/$MYSQL_INIT_SCRIPT_TARGET_FILE_NAME:ro
      - data_db_coa:/var/lib/mysql
@@ -83,7 +84,7 @@ services:
 
   db_cover_id:
     container_name: db_cover_id
-    image: "mariadb:10.2"
+    image: "mariadb:10.4"
     volumes:
      - $MYSQL_INIT_SCRIPT_COVER_INFO:/docker-entrypoint-initdb.d/$MYSQL_INIT_SCRIPT_TARGET_FILE_NAME:ro
      - data_db_cover_id:/var/lib/mysql
@@ -106,7 +107,7 @@ services:
 
   db_dm:
     container_name: db_dm
-    image: "mariadb:10.2"
+    image: "mariadb:10.4"
     volumes:
      - $MYSQL_INIT_SCRIPT_DM:/docker-entrypoint-initdb.d/$MYSQL_INIT_SCRIPT_TARGET_FILE_NAME:ro
      - data_db_dm:/var/lib/mysql
@@ -120,7 +121,7 @@ services:
 
   db_edgecreator:
     container_name: db_edgecreator
-    image: "mariadb:10.2"
+    image: "mariadb:10.4"
     volumes:
      - $MYSQL_INIT_SCRIPT_EDGECREATOR:/docker-entrypoint-initdb.d/$MYSQL_INIT_SCRIPT_TARGET_FILE_NAME:ro
      - data_db_edgecreator:/var/lib/mysql
@@ -152,7 +153,7 @@ services:
 
   db_dm_stats:
     container_name: db_dm_stats
-    image: "mariadb:10.2"
+    image: "mariadb:10.4"
     volumes:
      - $MYSQL_INIT_SCRIPT_DM_STATS:/docker-entrypoint-initdb.d/$MYSQL_INIT_SCRIPT_TARGET_FILE_NAME:ro
      - data_db_dm_stats:/var/lib/mysql
