--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,10 @@
 version: '2.4'
 
 services:
-  web:
+  web-api:
     container_name: dm-server-web
     image: "nginx:1.15"
     restart: always
-    ports:
-     - "8002:80"
     depends_on:
      - db_coa
      - db_cover_id
@@ -18,8 +16,12 @@ services:
      - ./nginx.conf:/etc/nginx/conf.d/default.conf
      - ./current:/var/www:z
     networks:
-     - front-network
-     - workspace_global-front-network
+     front-network:
+       aliases:
+         - web
+     workspace_global-front-network:
+       aliases:
+         - web-api
 
   php:
     container_name: dm-server-php
@@ -52,8 +54,6 @@ services:
     volumes:
      - $MYSQL_INIT_SCRIPT_COA:/docker-entrypoint-initdb.d/$MYSQL_INIT_SCRIPT_TARGET_FILE_NAME:ro
      - data_db_coa:/var/lib/mysql
-    ports:
-     - "44000:3306"
     environment:
       MYSQL_DATABASE: coa
       MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
@@ -88,8 +88,6 @@ services:
     volumes:
      - $MYSQL_INIT_SCRIPT_COVER_INFO:/docker-entrypoint-initdb.d/$MYSQL_INIT_SCRIPT_TARGET_FILE_NAME:ro
      - data_db_cover_id:/var/lib/mysql
-    ports:
-     - "44009:3306"
     environment:
       MYSQL_DATABASE: cover_info
       MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
@@ -111,8 +109,6 @@ services:
     volumes:
      - $MYSQL_INIT_SCRIPT_DM:/docker-entrypoint-initdb.d/$MYSQL_INIT_SCRIPT_TARGET_FILE_NAME:ro
      - data_db_dm:/var/lib/mysql
-    ports:
-     - "44002:3306"
     environment:
       MYSQL_DATABASE: dm
       MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
@@ -125,8 +121,6 @@ services:
     volumes:
      - $MYSQL_INIT_SCRIPT_EDGECREATOR:/docker-entrypoint-initdb.d/$MYSQL_INIT_SCRIPT_TARGET_FILE_NAME:ro
      - data_db_edgecreator:/var/lib/mysql
-    ports:
-     - "44003:3306"
     environment:
       MYSQL_DATABASE: edgecreator
       MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
@@ -155,10 +149,7 @@ services:
     container_name: db_dm_stats
     image: "mariadb:10.4"
     volumes:
-     - $MYSQL_INIT_SCRIPT_DM_STATS:/docker-entrypoint-initdb.d/$MYSQL_INIT_SCRIPT_TARGET_FILE_NAME:ro
-     - data_db_dm_stats:/var/lib/mysql
-    ports:
-     - "44010:3306"
+     - $MYSQL_INIT_SCRIPT_DM_STATS:/docker-en
     environment:
       MYSQL_DATABASE: dm_stats
       MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
