--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -114,3 +114,6 @@ doctrine:
                         dir: '%kernel.project_dir%/src/Entity/EdgeCreator'
                         prefix: 'App\Entity\EdgeCreator'
                         alias: EdgeCreator
+                dql:
+                    string_functions:
+                        group_concat: DoctrineExtensions\Query\Mysql\GroupConcat
