--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,9 @@ server {
     server_name localhost;
     root /var/www/html/public;
 
+    gzip on;
+    gzip_types text/plain application/json;
+
     location / {
         # try to serve file directly, fallback to index.php
         try_files $uri /index.php$is_args$args;
