--- a/composer.json
+++ b/composer.json
@@ -16,40 +16,36 @@
     },
     "require": {
         "php": "^7.3.0",
-        "ext-ctype": "*",
         "ext-curl": "*",
         "ext-exif": "*",
-        "ext-iconv": "*",
         "ext-json": "*",
-        "api-platform/api-pack": "^1.2",
-        "beberlei/doctrineextensions": "^1.2",
         "cloudinary/cloudinary_php": "1.14.*",
         "pusher/pusher-push-notifications": "^1.1",
         "sensio/framework-extra-bundle": "^5.2",
         "symfony-bundles/json-request-bundle": "^2.0",
-        "symfony/console": "4.3.*",
-        "symfony/dotenv": "4.3.*",
+        "symfony/console": "4.4.*",
+        "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.4",
-        "symfony/framework-bundle": "4.3.*",
+        "symfony/framework-bundle": "4.4.*",
         "symfony/maker-bundle": "^1.12",
         "symfony/monolog-bundle": "^3.4",
         "symfony/orm-pack": "^1.0",
-        "symfony/profiler-pack": "^1.0",
-        "symfony/security-bundle": "4.3.*",
-        "symfony/serializer": "4.3.*",
+        "symfony/security-bundle": "4.4.*",
+        "symfony/serializer": "4.4.*",
         "symfony/swiftmailer-bundle": "^3.2",
-        "symfony/translation": "4.3.*",
-        "symfony/twig-bundle": "4.3.*",
-        "symfony/web-server-bundle": "4.3.*",
-        "symfony/yaml": "4.3.*"
+        "symfony/translation": "4.4.*",
+        "symfony/twig-bundle": "4.4.*",
+        "symfony/yaml": "4.4.*"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.2",
         "liip/test-fixtures-bundle": "^1.3.0",
         "roave/security-advisories": "dev-master",
-        "symfony/browser-kit": "4.3.*",
-        "symfony/css-selector": "4.3.*",
-        "symfony/phpunit-bridge": "4.3.*"
+        "symfony/browser-kit": "4.4.*",
+        "symfony/css-selector": "4.4.*",
+        "symfony/phpunit-bridge": "4.4.*",
+        "symfony/stopwatch": "^4.4",
+        "symfony/web-profiler-bundle": "^4.4"
     },
     "config": {
         "preferred-install": {
@@ -93,7 +89,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "4.3.*"
+            "require": "4.4.*"
         }
     }
 }
