--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -50,6 +50,7 @@ services:
     image: "mariadb:10.2"
     volumes:
      - $MYSQL_INIT_SCRIPT_COA:/docker-entrypoint-initdb.d/$MYSQL_INIT_SCRIPT_TARGET_FILE_NAME:ro
+     - db_coa:/var/lib/mysql
     ports:
      - "64000:3306"
     environment:
@@ -65,6 +66,7 @@ services:
     image: "mariadb:10.2"
     volumes:
      - $MYSQL_INIT_SCRIPT_COVER_INFO:/docker-entrypoint-initdb.d/$MYSQL_INIT_SCRIPT_TARGET_FILE_NAME:ro
+     - db_cover_id:/var/lib/mysql
     ports:
      - "64009:3306"
     environment:
@@ -85,6 +87,7 @@ services:
     image: "mariadb:10.2"
     volumes:
      - $MYSQL_INIT_SCRIPT_DM:/docker-entrypoint-initdb.d/$MYSQL_INIT_SCRIPT_TARGET_FILE_NAME:ro
+     - db_dm:/var/lib/mysql
     ports:
      - "64002:3306"
     environment:
@@ -98,6 +101,7 @@ services:
     image: "mariadb:10.2"
     volumes:
      - $MYSQL_INIT_SCRIPT_EDGECREATOR:/docker-entrypoint-initdb.d/$MYSQL_INIT_SCRIPT_TARGET_FILE_NAME:ro
+     - db_edgecreator:/var/lib/mysql
     ports:
      - "64003:3306"
     environment:
@@ -111,6 +115,7 @@ services:
     image: "mariadb:10.2"
     volumes:
      - $MYSQL_INIT_SCRIPT_DM_STATS:/docker-entrypoint-initdb.d/$MYSQL_INIT_SCRIPT_TARGET_FILE_NAME:ro
+     - db_dm_stats:/var/lib/mysql
     ports:
      - "64010:3306"
     environment:
@@ -128,3 +133,10 @@ networks:
     driver: bridge
   cover-id-network:
     driver: bridge
+
+volumes:
+  db_coa:
+  db_cover_id:
+  db_dm:
+  db_edgecreator:
+  db_dm_stats:
