--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "ext-curl": "*",
         "ext-exif": "*",
         "ext-json": "*",
-        "cloudinary/cloudinary_php": "1.14.*",
+        "cloudinary/cloudinary_php": "^1.14",
         "pusher/pusher-push-notifications": "^1.1",
         "sensio/framework-extra-bundle": "^5.2",
         "symfony-bundles/json-request-bundle": "^2.0",
@@ -29,7 +29,7 @@
         "symfony/framework-bundle": "4.4.*",
         "symfony/maker-bundle": "^1.12",
         "symfony/monolog-bundle": "^3.4",
-        "symfony/orm-pack": "^1.0",
+        "symfony/orm-pack": "^2.0",
         "symfony/security-bundle": "4.4.*",
         "symfony/serializer": "4.4.*",
         "symfony/swiftmailer-bundle": "^3.2",
