Fix retrieving default EM on prod

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -59,7 +59,7 @@ doctrine:
                 mapping_types:
                     enum: string
     orm:
-        auto_generate_proxy_classes: true
+        auto_generate_proxy_classes: '%kernel.debug%'
         default_entity_manager: 'dm'
         entity_managers:
             dm:
