--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -1,15 +1,15 @@
-FROM php:7.3-fpm
+FROM php:7.4-fpm
 MAINTAINER Bruno Perel
 
-RUN apt-get update && apt-get install -y git wget unzip mariadb-client nano msmtp telnet
+RUN apt-get update && apt-get install -y git wget unzip mariadb-client nano msmtp telnet libicu-dev
 
 RUN echo 'sendmail_path = /usr/bin/env catchmail -f admin@ducksmanager.net' > /usr/local/etc/php/conf.d/mail.ini
 
-RUN pecl install apcu
-RUN echo "extension=apcu.so" > /usr/local/etc/php/conf.d/apcu.ini
+RUN pecl install apcu && \
+    echo "extension=apcu.so" > /usr/local/etc/php/conf.d/apcu.ini
 
-RUN docker-php-ext-install -j$(nproc) pdo_mysql exif opcache
+RUN docker-php-ext-install -j$(nproc) pdo_mysql exif opcache intl
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-RUN pecl install xdebug-2.7.1 && docker-php-ext-enable xdebug
+RUN pecl install xdebug && docker-php-ext-enable xdebug
