--- a/composer.json
+++ b/composer.json
@@ -15,37 +15,38 @@
         "issues": "https://github.com/bperel/dm-server/issues"
     },
     "require": {
-        "php": "^7.3.0",
+        "php": "^7.4",
         "ext-curl": "*",
         "ext-exif": "*",
         "ext-json": "*",
+        "ext-intl": "*",
         "cloudinary/cloudinary_php": "^1.14",
         "pusher/pusher-push-notifications": "^1.1",
         "sensio/framework-extra-bundle": "^5.2",
         "symfony-bundles/json-request-bundle": "^3.0",
-        "symfony/console": "4.4.*",
-        "symfony/dotenv": "4.4.*",
+        "symfony/console": "^5.1",
+        "symfony/dotenv": "^5.1",
         "symfony/flex": "^1.4",
-        "symfony/framework-bundle": "4.4.*",
+        "symfony/framework-bundle": "^5.1",
         "symfony/maker-bundle": "^1.12",
         "symfony/monolog-bundle": "^3.4",
         "symfony/orm-pack": "^2.0",
-        "symfony/security-bundle": "4.4.*",
-        "symfony/serializer": "4.4.*",
+        "symfony/security-bundle": "^5.1",
+        "symfony/serializer": "^5.1",
         "symfony/swiftmailer-bundle": "^3.2",
-        "symfony/translation": "4.4.*",
-        "symfony/twig-bundle": "4.4.*",
-        "symfony/yaml": "4.4.*"
+        "symfony/translation": "^5.1",
+        "symfony/twig-bundle": "^5.1",
+        "symfony/yaml": "^5.1"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.2",
         "liip/test-fixtures-bundle": "^1.3.0",
         "roave/security-advisories": "dev-master",
-        "symfony/browser-kit": "4.4.*",
-        "symfony/css-selector": "4.4.*",
-        "symfony/phpunit-bridge": "4.4.*",
-        "symfony/stopwatch": "^4.4",
-        "symfony/web-profiler-bundle": "^4.4"
+        "symfony/browser-kit": "^5.1",
+        "symfony/css-selector": "^5.1",
+        "symfony/phpunit-bridge": "^5.1",
+        "symfony/stopwatch": "^5.1",
+        "symfony/web-profiler-bundle": "^5.1"
     },
     "config": {
         "preferred-install": {
@@ -89,7 +90,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "4.4.*"
+            "require": "5.1.*"
         }
     }
 }
