Fix SMTP username for mailcatcher config

--- a/.env
+++ b/.env
@@ -54,7 +54,7 @@ SMTP_HOST=localhost
 SMTP_ORIGIN_EMAIL_DOMAIN_DUCKSMANAGER=localhost-origin
 SMTP_ORIGIN_EMAIL_DOMAIN_EDGECREATOR=localhost-origin-edgecreator
 SMTP_PASSWORD=pass
-SMTP_USERNAME=user-ducksmanager
+SMTP_USERNAME=admin@ducksmanager.net
 SMTP_FRIENDLYNAME=DucksManager
 
 WEBSITE_ROOT=http://localhost:8000
