Always restart DB and Pastec containers locally

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -48,6 +48,7 @@ services:
   db_coa:
     container_name: db_coa
     image: "mariadb:10.4"
+    restart: always
     volumes:
      - $MYSQL_INIT_SCRIPT_COA:/docker-entrypoint-initdb.d/$MYSQL_INIT_SCRIPT_TARGET_FILE_NAME:ro
      - db_coa:/var/lib/mysql
@@ -64,6 +65,7 @@ services:
   db_cover_id:
     container_name: db_cover_id
     image: "mariadb:10.4"
+    restart: always
     volumes:
      - $MYSQL_INIT_SCRIPT_COVER_INFO:/docker-entrypoint-initdb.d/$MYSQL_INIT_SCRIPT_TARGET_FILE_NAME:ro
      - db_cover_id:/var/lib/mysql
@@ -77,6 +79,7 @@ services:
   pastec:
     container_name: pastec
     image: "bperel/pastec-ubuntu-1704-timestamps"
+    restart: always
     networks:
      - cover-id-network
     volumes:
@@ -85,6 +88,7 @@ services:
   db_dm:
     container_name: db_dm
     image: "mariadb:10.4"
+    restart: always
     volumes:
      - $MYSQL_INIT_SCRIPT_DM:/docker-entrypoint-initdb.d/$MYSQL_INIT_SCRIPT_TARGET_FILE_NAME:ro
      - db_dm:/var/lib/mysql
@@ -99,6 +103,7 @@ services:
   db_edgecreator:
     container_name: db_edgecreator
     image: "mariadb:10.4"
+    restart: always
     volumes:
      - $MYSQL_INIT_SCRIPT_EDGECREATOR:/docker-entrypoint-initdb.d/$MYSQL_INIT_SCRIPT_TARGET_FILE_NAME:ro
      - db_edgecreator:/var/lib/mysql
@@ -113,6 +118,7 @@ services:
   db_dm_stats:
     container_name: db_dm_stats
     image: "mariadb:10.4"
+    restart: always
     volumes:
      - $MYSQL_INIT_SCRIPT_DM_STATS:/docker-entrypoint-initdb.d/$MYSQL_INIT_SCRIPT_TARGET_FILE_NAME:ro
      - db_dm_stats:/var/lib/mysql
