--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "symfony/swiftmailer-bundle": "^3.2",
         "symfony/translation": "^5.1",
         "symfony/twig-bundle": "^5.1",
+        "symfony/validator": "^5.1",
         "symfony/yaml": "^5.1"
     },
     "require-dev": {
