--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,7 @@
+log_format dm_server '$remote_addr - $remote_user [$time_local] '
+                    '"$request" $status $request_time $body_bytes_sent '
+                    '"$http_referer" "$http_user_agent"';
+
 server {
     server_name localhost;
     root /var/www/html/public;
@@ -24,5 +28,5 @@ server {
     }
 
     error_log  /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
+    access_log /var/log/nginx/access.log dm_server;
 }
