Update dm.net image URLs

--- a/.env
+++ b/.env
@@ -43,10 +43,10 @@ DATABASE_EDGECREATOR_USER=root
 DATABASE_EDGECREATOR_PASS=changeme
 DATABASE_EDGECREATOR_DB=edgecreator
 
-ASSETS_MEDALS_PICTURES_ROOT=http://localhost:8000/images/medailles/
+ASSETS_MEDALS_PICTURES_ROOT=http://localhost:8001/build/images/medals/
 IMAGE_LOCAL_ROOT=/tmp/dm-server/
 IMAGE_REMOTE_ROOT=https://inducks.org/hr.php?normalsize=1&image=https://outducks.org/
-IMAGE_UPLOAD_ROOT=http://localhost:8000/edges/tranches_multiples/
+IMAGE_UPLOAD_ROOT=http://localhost:8002/edges/tranches_multiples/
 PASTEC_HOSTS=pastec
 PASTEC_PORT=4212
 
@@ -57,8 +57,9 @@ SMTP_PASSWORD=pass
 SMTP_USERNAME=admin@ducksmanager.net
 SMTP_FRIENDLYNAME=DucksManager
 
-WEBSITE_ROOT=http://localhost:8000
-EDGES_ROOT=http://localhost:8000/edges
+WEBSITE_ROOT=http://localhost:8001
+EDGECREATOR_ROOT=http://localhost:3000
+EDGES_ROOT=http://localhost:8002/edges
 PASTEC_INIT_INDEX=./pastec-index-last.dat
 
 CLOUDINARY_URL=cloudinary://my_key:my_secret@my_cloud_name
