--- a/.env.test
+++ b/.env.test
@@ -16,7 +16,7 @@ ROLE_PASSWORD_WHATTHEDUCK=whattheduckpass
 ROLE_PASSWORD_RAWSQL=rawsqlpass
 ROLE_PASSWORD_ADMIN=adminpass
 
-ASSETS_MEDALS_PICTURES_ROOT=http://localhost:8000/images/medailles/
+ASSETS_MEDALS_PICTURES_ROOT=http://localhost:8001/build/images/medals/
 IMAGE_LOCAL_ROOT=/tmp/dm-server/
 IMAGE_REMOTE_ROOT=/var/www/html/tests/Fixtures/
 IMAGE_UPLOAD_ROOT=/tmp/uploaded_edges/
@@ -29,4 +29,4 @@ SMTP_ORIGIN_EMAIL_DOMAIN_EDGECREATOR=edgecreator.ducksmanager.net
 SMTP_PASSWORD=pass
 SMTP_USERNAME=admin@ducksmanager.net
 SMTP_FRIENDLYNAME=DucksManager
-WEBSITE_ROOT=http://localhost:8000
+WEBSITE_ROOT=http://localhost:8001
