--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -71,6 +71,7 @@ services:
       - db_coa
     volumes:
       - db_coa:/var/lib/mysql_live
+    command: [ 'mysqld', '--character-set-server=utf8', '--collation-server=utf8_unicode_ci' ]
     environment:
       MYSQL_DATABASE: coa
       MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
