--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -69,12 +69,13 @@ services:
       context: ../coa-updater
     depends_on:
       - db_coa
-    volumes:
-      - db_coa:/var/lib/mysql_live
-    command: [ 'mysqld', '--character-set-server=utf8', '--collation-server=utf8_unicode_ci' ]
     environment:
+      MYSQL_HOST: db_coa
       MYSQL_DATABASE: coa
+      MYSQL_DATABASE_NEW: coa_new
       MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
+    networks:
+      - db-network
 
   db_cover_id:
     container_name: db_cover_id
