Update duck-estimator for playwright usage

--- a/.env
+++ b/.env
@@ -66,3 +66,7 @@ CLOUDINARY_URL=cloudinary://my_key:my_secret@my_cloud_name
 
 PUSHER_INSTANCE_ID=
 PUSHER_SECRET_KEY=
+
+GITHUB_TOKEN=
+GITHUB_NAME=
+GITHUB_EMAIL=
