--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,13 @@
         "php": "^7.4",
         "ext-curl": "*",
         "ext-exif": "*",
-        "ext-json": "*",
         "ext-intl": "*",
+        "ext-json": "*",
         "beberlei/doctrineextensions": "^1.2",
         "cloudinary/cloudinary_php": "^1.14",
         "pusher/pusher-push-notifications": "^1.1",
         "sensio/framework-extra-bundle": "^5.2",
+        "sentry/sentry-symfony": "^4.1",
         "symfony-bundles/json-request-bundle": "^3.0",
         "symfony/console": "^5.1",
         "symfony/dotenv": "^5.1",
