Import bootstrap-vue's components and directives on demand to enable tree shaking

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -65,8 +65,7 @@ services:
 
   coa-updater:
     container_name: coa-updater
-    build:
-      context: ../coa-updater
+    image: bperel/coa-updater
     depends_on:
       - db_coa
     environment:
