--- a/.github/workflows/popularity-updater.yml
+++ b/.github/workflows/popularity-updater.yml
@@ -5,7 +5,7 @@ on:
     - cron:  '0 * * * *'
   workflow_dispatch:
 jobs:
-  duck-estimator:
+  popularity-updater:
     runs-on: ubuntu-latest
     environment: production
     steps:
