--- a/.github/workflows/dm-server.yml
+++ b/.github/workflows/dm-server.yml
@@ -15,6 +15,7 @@ jobs:
           host: ${{ secrets.PRODUCTION_SSH_HOST }}
           username: ${{ secrets.PRODUCTION_SSH_USER }}
           key: ${{ secrets.PRODUCTION_SSH_KEY }}
+          command_timeout: 50m
           script: |
             cd workspace/dm-server
             docker-compose pull coa-updater
